# Immersive-Worlds

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CodingConventions.txt  README.md  webchat.html
config/: minigame.json
doc/: JsonStructureDocument  db schema
lib/: CMakeLists.txt  character.h
lib/Combat/: CMakeLists.txt
lib/Combat/include/: Combat.h
lib/Combat/src/: Combat.cpp
lib/actions/: CMakeLists.txt
lib/actions/include/: CombatActions.h  GameActions.h  MiniGameActions.h
lib/actions/src/: CombatActions.cpp  GameActions.cpp  MiniGameActions.cpp
lib/channel/: CMakeLists.txt
lib/channel/include/: Area.h  MiniGame.h  Room.h  RoomConnection.h  World.h
lib/channel/include/nlohmann/: json.hpp
lib/channel/src/: Area.cpp  MiniGame.cpp  Room.cpp  RoomConnection.cpp  World.cpp
lib/characters/: CMakeLists.txt
lib/characters/include/: Avatar.h  NonUserCharacter.h  character.h
lib/characters/src/: Avatar.cpp  NonUserCharacter.cpp  character.cpp
lib/commands/: CMakeLists.txt
lib/commands/include/: Command.h  CommandProcessor.h  DefaultUserCommand.h  LoginCommand.h  LogoutCommand.h  RegisterCommand.h  YellCommand.h
lib/commands/src/: CommandProcessor.cpp  DefaultUserCommand.cpp  LoginCommand.cpp  LogoutCommand.cpp  RegisterCommand.cpp  YellCommand.cpp
lib/controllers/: CMakeLists.txt
lib/controllers/include/: AbstractController.h  AccountController.h  AvatarController.h  GameController.h  ID.h  MiniGameCommand.h  UserController.h  WorldContainer.h  WorldHandler.h
lib/controllers/src/: AccountController.cpp  AvatarController.cpp  GameController.cpp  UserController.cpp  WorldContainer.cpp  WorldHandler.cpp
lib/cusjson/: CMakeLists.txt
lib/cusjson/include/: ContainerJsonWrapper.h  CusJson.h  DoorStateJsonWrapper.h  EquipNPCAction.h  GiveNPCAction.h  NPCAction.h  NPCJsonWrapper.h  ObjectJsonWrapper.h
lib/cusjson/src/: ContainerJsonWrapper.cpp  CusJson.cpp  DoorStateJsonWrapper.cpp  EquipNPCAction.cpp  GiveNPCAction.cpp  NPCJsonWrapper.cpp  ObjectJsonWrapper.cpp
lib/database/: CMakeLists.txt  adventure.db  db schema
lib/database/include/: DBUtil.h  SqlStatements.h
lib/database/src/: DBUtil.cpp  SqlStatements.cpp
lib/datastorage/: CMakeLists.txt
lib/datastorage/include/: DataStorage.h
lib/datastorage/src/: DataStorage.cpp
lib/game/: CMakeLists.txt
lib/game/include/: AttackCommand.h  Command.h  CommandProcessor.h  GameActor.h  GameController.h  GameService.h  MiniGameCommand.h  MoveCommand.h  WorldHandler.h  YellCommand.h
lib/game/src/: AttackCommand.cpp  CommandProcessor.cpp  GameController.cpp  GameService.cpp  ID.cpp  MiniGameCommand.cpp  MoveCommand.cpp  WorldContainer.cpp  WorldHandler.cpp  YellCommand.cpp
lib/gamemanager/: CMakeLists.txt
lib/gamemanager/include/: ID.h  WorldContainer.h  WorldHandler.h
lib/gamemanager/src/: ID.cpp  WorldContainer.cpp  WorldHandler.cpp
lib/inventory/: CMakeLists.txt
lib/inventory/include/: ContainerItem.h  Inventory.h  InventoryItem.h  Object.h  SingleItem.h
lib/inventory/src/: ContainerItem.cpp  Inventory.cpp  InventoryItem.cpp  Object.cpp  SingleItem.cpp
lib/message/: CMakeLists.txt
lib/message/include/: Message.h
lib/message/src/: Message.cpp
lib/models/: CMakeLists.txt
lib/models/include/: Area.h  Avatar.h  Combat.h  ContainerItem.h  Inventory.h  InventoryItem.h  MiniGame.h  MultipleChoice.h  Object.h  Room.h  RoomConnection.h  SingleItem.h  World.h
lib/models/src/: Area.cpp  Avatar.cpp  Combat.cpp  InventoryItem.cpp  MiniGame.cpp  MultipleChoice.cpp  Object.cpp  Room.cpp  RoomConnection.cpp  SingleItem.cpp  World.cpp
lib/networking/: Avatar.cpp  Avatar.h  CMakeLists.txt
lib/networking/include/: Client.h  ClientManager.h  ConsoleCommands.h  Server.h  User.h  login.h
lib/networking/src/: Client.cpp  ClientManager.cpp  ConsoleCommands.cpp  Server.cpp  User.cpp  login.cpp
lib/processors/: CMakeLists.txt
lib/processors/include/: CommandProcessor.h
lib/processors/src/: CommandProcessor.cpp
lib/services/: CMakeLists.txt
lib/services/include/: AbstractDataStorageService.h  AccountService.h  AvatarService.h  CombatService.h  DataStorageService.h  DataStorageServiceInterface.h  Direction.h  GameService.h  InventoryService.h  MiniGameService.h  RoomConnectionService.h  Service.h  UserService.h  UserState.h
lib/services/src/: AccountService.cpp  AvatarService.cpp  CombatService.cpp  DataStorageService.cpp  GameService.cpp  InventoryService.cpp  MiniGameService.cpp  RoomConnectionService.cpp  UserService.cpp
lib/sorttheselater/: NonUserCharacter.cpp  NonUserCharacter.h  character.cpp
lib/user/: CMakeLists.txt
lib/user/include/: User.h
lib/user/src/: User.cpp
lib/utilities/: CMakeLists.txt
lib/utilities/include/: AccountStateTransitions.h  Command.h  Helper.h  ID.h  Message.h  StateTransitions.h  User.h  UserState.h
lib/utilities/src/: Helper.cpp  ID.cpp  User.cpp
lib/worldcontainer/: CMakeLists.txt
lib/worldcontainer/src/: WorldContainer.cpp
lib/worldhandler/: CMakeLists.txt
lib/worldhandler/include/: WorldHandler.h
lib/worldhandler/src/: WorldHandler.cpp
test/: CMakeLists.txt  areaTests.cpp  networkTests.cpp  roomTest.cpp
test/MessageTest/: MessageTest.cpp
test/NetworkingTests/: CilentManagerTests.cpp  ConsoleCommandTests.cpp  ServerTests.cpp  UserServiceManagementTest.cpp
test/actions/: MiniGameActions.cpp
test/channel/: channelTest.cpp  channelTest.h
test/controllers/: AccountControllerTests.cpp  GameControllerTests.cpp
test/controllersTest/: GameControllerTest.cpp
test/databaseTest/: DatabaseTest.cpp
test/gameManager/: idTest.cpp
test/inventory/: inventoryTest.cpp
test/models/: InventoryTests.cpp  RoomTests.cpp  areaTests.cpp  modelsTest.cpp  roomTest.cpp  roomTest.h
test/networking/: ServerTests.cpp
test/processors/: CommandProcessorTests.cpp
test/services/: AccountServiceTests.cpp  CombatServiceTest.cpp  DataStorageStub.h  RoomConnectionServiceTests.cpp
tools/gameserver/: CMakeLists.txt  ClientCommands.cpp  ClientCommands.h  GameServer.cpp  commandProcessor.cpp  commandProcessor.h  gameserver.cpp
(+46 files in other folders)
