add_subdirectory(networking)
add_subdirectory(inventory)
add_subdirectory(channel)
add_subdirectory(message)
add_subdirectory(datastorage)
add_subdirectory(characters)
add_subdirectory(cusjson)
add_subdirectory(Combat)
add_subdirectory(controllers)
add_subdirectory(commands)
add_subdirectory(services)
