add_subdirectory(networking)
add_subdirectory(inventory)
add_subdirectory(models)
add_subdirectory(datastorage)
add_subdirectory(characters)
add_subdirectory(cusjson)
add_subdirectory(Combat)
add_subdirectory(database)
add_subdirectory(controllers)
add_subdirectory(commands)
add_subdirectory(services)
add_subdirectory(user)
